Python version/languages/asp/parser/ASPGrammarParser.py
# Generated from ASPGrammar.g4 by ANTLR 4.7
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class ASPGrammarParser ( Parser ):

    grammarFileName = "ASPGrammar.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "','", "')'", "'['", "']'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "IDENTIFIER", "INTEGER", 
                      "STRING", "WHITESPACE" ]

    RULE_output = 0
    RULE_predicate_atom = 1
    RULE_term = 2

    ruleNames =  [ "output", "predicate_atom", "term" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    IDENTIFIER=6
    INTEGER=7
    STRING=8
    WHITESPACE=9

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class OutputContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def predicate_atom(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ASPGrammarParser.Predicate_atomContext)
            else:
                return self.getTypedRuleContext(ASPGrammarParser.Predicate_atomContext,i)


        def getRuleIndex(self):
            return ASPGrammarParser.RULE_output

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOutput" ):
                return visitor.visitOutput(self)
            else:
                return visitor.visitChildren(self)




    def output(self):

        localctx = ASPGrammarParser.OutputContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_output)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 9
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==ASPGrammarParser.IDENTIFIER:
                self.state = 6
                self.predicate_atom()
                self.state = 11
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Predicate_atomContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(ASPGrammarParser.IDENTIFIER, 0)

        def term(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ASPGrammarParser.TermContext)
            else:
                return self.getTypedRuleContext(ASPGrammarParser.TermContext,i)


        def getRuleIndex(self):
            return ASPGrammarParser.RULE_predicate_atom

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPredicate_atom" ):
                return visitor.visitPredicate_atom(self)
            else:
                return visitor.visitChildren(self)




    def predicate_atom(self):

        localctx = ASPGrammarParser.Predicate_atomContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_predicate_atom)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 12
            self.match(ASPGrammarParser.IDENTIFIER)
            self.state = 24
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==ASPGrammarParser.T__0:
                self.state = 13
                self.match(ASPGrammarParser.T__0)
                self.state = 14
                self.term()
                self.state = 19
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==ASPGrammarParser.T__1:
                    self.state = 15
                    self.match(ASPGrammarParser.T__1)
                    self.state = 16
                    self.term()
                    self.state = 21
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 22
                self.match(ASPGrammarParser.T__2)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TermContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(ASPGrammarParser.IDENTIFIER, 0)

        def INTEGER(self):
            return self.getToken(ASPGrammarParser.INTEGER, 0)

        def predicate_atom(self):
            return self.getTypedRuleContext(ASPGrammarParser.Predicate_atomContext,0)


        def term(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ASPGrammarParser.TermContext)
            else:
                return self.getTypedRuleContext(ASPGrammarParser.TermContext,i)


        def STRING(self):
            return self.getToken(ASPGrammarParser.STRING, 0)

        def getRuleIndex(self):
            return ASPGrammarParser.RULE_term

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTerm" ):
                return visitor.visitTerm(self)
            else:
                return visitor.visitChildren(self)




    def term(self):

        localctx = ASPGrammarParser.TermContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_term)
        self._la = 0 # Token type
        try:
            self.state = 42
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 26
                self.match(ASPGrammarParser.IDENTIFIER)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 27
                self.match(ASPGrammarParser.INTEGER)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 28
                self.predicate_atom()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 29
                self.match(ASPGrammarParser.T__3)
                self.state = 38
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << ASPGrammarParser.T__3) | (1 << ASPGrammarParser.IDENTIFIER) | (1 << ASPGrammarParser.INTEGER) | (1 << ASPGrammarParser.STRING))) != 0):
                    self.state = 30
                    self.term()
                    self.state = 35
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==ASPGrammarParser.T__1:
                        self.state = 31
                        self.match(ASPGrammarParser.T__1)
                        self.state = 32
                        self.term()
                        self.state = 37
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)



                self.state = 40
                self.match(ASPGrammarParser.T__4)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 41
                self.match(ASPGrammarParser.STRING)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





